Fixed image overlap plus get route twice in index.js and added index to .hero class + updated donut image

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,6 +29,7 @@ a {
 .hero p,
 .hero a {
   position: relative;
+  z-index: 1;
 }
 
 /* SKIP LINK */
